--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -226,11 +226,14 @@ h6 {
 # Hero Section
 --------------------------------------------------------------*/
 #hero {
+  position: relative;
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
-  background-size: cover;
+  background: url("../img/kalpesh.jpeg") top center;
+  /*background-size: cover;*/
+  background-size: 100% 100vh;
 }
+
 
 #hero:before {
   content: "";
